@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Fix ToJSON to use accessors if it needs to (Thanks Kevin Benson!)
  - Fix silly typo in ::Explain (Good catch Jonathan W. Taylor!)
 
 2.023002  2014-06-28 15:04:15-05:00 America/Chicago
